--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -1,2 +1,47 @@
 \newacronym{uhi}{UHI}{Urban Heat Island}
+\newacronym{buhi}{BUHI}{Boundary Layer Urban Heat Island}
+\newacronym{cuhi}{CUHI}{Canopy Urban Heat Island}
+\newacronym{suhi}{SUHI}{Surface Urban Heat Islands}
+\newacronym{uhii}{UHII}{urban heat island intensity}
+\newacronym{rmse}{RMSE}{root mean squared error}
+\newacronym{mse}{MSE}{mean squared error}
 \newacronym{lst}{LST}{Land Surface Temperatures}
+\newacronym{ta}{T$_{air}$}{air temperature}
+\newacronym{r2}{R$^2$}{R-squared}
+\newacronym{hgb}{HistGB}{Histogram-based Gradient Boosting}
+\newacronym{modis}{MODIS}{Moderate Resolution Imaging Spectroradiometer}
+\newacronym{dwd}{DWD}{German Weather Service}
+\newacronym{wmo}{WMO}{World Meteorological Organization}
+\newacronym{pws}{PWS}{private weather station}
+\newacronym{cws}{CWS}{citizen weather station}
+\newacronym{qc}{QC}{quality control}
+\newacronym{eumetnet}{EUMETNET}{European Meteorological Network}
+\newacronym{ml}{ML}{machine learning}
+\newacronym{pbl}{PBL}{planetary boundary layer}
+\newacronym{lcz}{LCZ}{local climate zone}
+\newacronym{p2p}{P2P}{peer-to-peer}
+\newacronym{sane}{SANE}{Smart Networks for Urban Citizen Participation}
+\newacronym{wsn}{WSN}{Wireless sensor networks}
+\newacronym{lcs}{LCS}{low-cost sensors}
+\newacronym{pm}{PM}{particulate matter}
+\newacronym{svf}{SVF}{sky-view factor}
+\newacronym{ux}{UX}{user experience}
+\newacronym{idw}{IDW}{inverse-distance weighting}
+\newacronym{ok}{OK}{Ordinary Kriging}
+\newacronym{ai}{AI}{artificial intelligence}
+\newacronym{dl}{DL}{deep learning}
+\newacronym{ann}{ANN}{Artificial Neural Network}
+\newacronym{nan}{NaN}{not a number}
+\newacronym{knn}{KNN}{K-Nearest Neighbours}
+\newacronym{rf}{RF}{Random Forests}
+\newacronym{qrf}{QRF}{Quantile Regression Forests}
+\newacronym{svm}{SVM}{Support Vector Machine}
+\newacronym{rfsp}{RFsp}{Random Forest for Spatial Predictions Framework}
+\newacronym{rfsi}{RFSI}{Random Forest for Spatial Interpolation}
+\newacronym{svr}{SVR}{Support Vector Regression}
+\newacronym{rbf}{RBF}{Radial Basis Function}
+\newacronym{wow}{WOW}{Weather Observations Website}
+\newacronym{gee}{Google EE}{Google Earth Engine}
+\newacronym{ecv}{ECV}{Essential Climate Variables}
+\newacronym{ndvi}{NDVI}{Difference Vegetation Index}
+\newacronym{vif}{VIF}{variance inflation factor}
