--- a/appendix_general.tex
+++ b/appendix_general.tex
@@ -6,7 +6,7 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=.8\textwidth]{images/qc_hamburg_netatmo_june_before_after.png}
-    \caption{QC for Netatmo in Hamburg showing difference between day and night, 19.06.2023}
+    \caption{\gls{qc} for Netatmo in Hamburg showing difference between day and night, 19.06.2023}
     \label{fig:qc netatmo hamburg before after m5}
 \end{figure}
 
@@ -92,16 +92,16 @@ The locations of the stations are presented in Figure~\ref{fig:eval_hamburg_loca
 
 \section{Areal Interpolation}
 
-Figure~\ref{fig:dwd stuttgart june 23 mean min max} shows the mean/max/min air temperature for DWD station with id 4931 across June 2023 in Stuttgart near the airport.
-Figure~\ref{fig:dwd stuttgart june 23 10 min 2m 5cm} shows the air temperature for the same station on the 19. June 2023 in a 10 minute interval. The blue line, i.e., TT\_10, shows the air temperature at 2m while the orange line, i.e., TM5\_10, shows the air temperature at 5cm directly above the ground.
+Figure~\ref{fig:dwd stuttgart june 23 mean min max} shows the mean/max/min \gls{ta} for \gls{dwd} station with id 4931 across June 2023 in Stuttgart near the airport.
+Figure~\ref{fig:dwd stuttgart june 23 10 min 2m 5cm} shows the \gls{ta} for the same station on the 19. June 2023 in a 10 minute interval. The blue line, i.e., TT\_10, shows the \gls{ta} at 2m while the orange line, i.e., TM5\_10, shows the \gls{ta} at 5cm directly above the ground.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1\textwidth]{images/dwd_stuttgart_june_23_tair_max_mean_min.png}
-    \caption{DWD Station 4931, Stuttgart, June 2023}
+    \caption{\gls{dwd} Station 4931, Stuttgart, June 2023}
     \label{fig:dwd stuttgart june 23 mean min max}
 
     \includegraphics[width=1\textwidth]{images/dwd_stuttgart_june_19_23_tair.png}
-    \caption{DWD Station 4931, Stuttgart, 19. June 2023}
+    \caption{\gls{dwd} Station 4931, Stuttgart, 19. June 2023}
     \label{fig:dwd stuttgart june 23 10 min 2m 5cm}
 \end{figure}
