--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,3 @@
 \chapter*{Abstract}
-In 2023 56\% of the human population already lives in urban areas with the number projected to continuously  increase to 68\% by 2050. Combined with the ongoing climate change and urban densification due to the need for more and more living space, cities are facing many new challenges. With the removal of vegetation in favour of living space and the sealing of surfaces with heat-absorbing materials such as asphalt or concrete for streets and highways, rising temperatures lead to new phenomena that pose risks for the urban citizens. One especially critical phenomenon is the urban heat-island (UHI).\\
-To detect and understand UHI formation, one must measure the urban climate of a city in a very detailed way, which current official meteorologicalmonitoring networks with less than one weather station per city are not capable of. In this work, we explore how machine-learning based interpolation can be used in urban air temperature sensing applications to leverage new possibilities of private-owned weather station and sensor networks to interpolate air temperature either for specific locations, augmenting times when sensors might be offline, or non-stationary sensors moving through a city, as well as areal interpolation to predict air temperature between sensors. We show that for interpolating a single sensor, Histogram-based Gradient Boosting is a powerful ML approach that achieves a RMSE between 0.4 and 0.5 for sensors from Netatmo and Sensor.Community in Hamburg and Stuttgart, and that other features other than air temperature of surrounding neighbours have little to no influence on the model. Areal interpolation on the other hand seems more challenging and performs much worse with an RMSE between 3 to 4, suggesting that there is more improvement potential in this area.
+In 2023 56\% of the human population already lives in urban areas with the number projected to continuously increase to 68\% by 2050. Combined with the ongoing climate change and urban densification due to the need for more and more living space, cities are facing many new challenges. With the removal of vegetation in favour of living space and the sealing of surfaces with heat-absorbing materials such as asphalt or concrete for streets and highways, rising temperatures lead to new phenomena that pose risks for the urban citizens. One especially critical phenomenon is the \gls{uhi}.\\
+To detect and understand \gls{uhi} formation, one must measure the urban climate of a city in a very detailed way, which current official meteorological monitoring networks with less than one weather station per city are not capable of. In this work, we explore how machine-learning based interpolation can be used in urban \gls{ta} sensing applications to leverage new possibilities of private-owned weather station and sensor networks to interpolate \gls{ta} either for specific locations, augmenting times when sensors might be offline, or non-stationary sensors moving through a city, as well as areal interpolation to predict \gls{ta} between sensors. We show that for interpolating a single sensor, \gls{hgb} is a powerful machine learning approach that achieves a \gls{rmse} between 0.4 and 0.5 for sensors from Netatmo and Sensor.Community in Hamburg and Stuttgart, and that other features other than \gls{ta} of surrounding neighbours have little to no influence on the model. Areal interpolation on the other hand seems more challenging and performs slightly worse with an \gls{rmse} of 1.4-1.5 during especially hot times during the day with \gls{r2} values at most of 0.2, while during the night the \gls{rmse} is down to 0.65-0.7 for \gls{hgb} with \gls{r2} scores around 0.7, suggesting that there is more improvement potential in this area.
